--- a/css/travels.css
+++ b/css/travels.css
@@ -54,3 +54,10 @@
     width: 100%;
     height: 600px;
 }
+
+@media (max-width: 768px) {
+    .map-container iframe {
+        height: 400px;
+        /* Adjust this value as needed */
+    }
+}
